fix navbar shift to right

--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -89,6 +89,11 @@
 .mobileNavLinks a:hover {
     text-decoration: underline;
 }
+
+.galleryNavbar .navbarLinks {
+    margin-right: -10rem;
+}
+
 @media screen and (max-width: 1024px) {
     .navbarLinks {
         display: none
